--- a/Views/Student/StudentIndex.cshtml
+++ b/Views/Student/StudentIndex.cshtml
@@ -88,6 +88,7 @@
     </div>
 }
 
-<div>
-    @Html.ActionLink("Home Page", "StudentProfile")
-</div>
+    <div>
+        @Html.ActionLink("Home Page", "ViewDetails", new { id = Model.UserId })
+     
+    </div>
